packages/workbench/src/app/pages/login/login-page.component.scss
:host {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;

  .login-form {
    width: 600px;
    max-width: 60%;
    margin: auto;

    .application-logo {
      display: flex;
      justify-content: center;
    }

    .login-title {
      text-align: center;
      margin-top: 2rem;
    }

    .login-card {
      border: 1px solid var(--gw-panel-border-color);
      border-radius: 4px;
      box-shadow: 0 3px 6px rgb(0 0 0 / 10%);
      padding: 1.6rem;
    }

    .group {
      display: flex;
      flex-direction: column;
      margin-bottom: 1.5rem;
    }

    .group label {
      margin-bottom: 0.5rem;
      font-weight: 400;
    }

    .group .input-wrapper {
      position: relative;
      display: flex;
      align-items: center;
      width: 100%;

      .icon-wrapper {
        position: absolute;
        left: 0;
        top: 50%;
        transform: translateY(-50%);
        padding: 0 0.75rem;
        color: var(--gw-text-muted-color);
        pointer-events: none;
        z-index: 1;

        i {
          font-size: 1.5rem;
        }
      }
    }

    .group .input-field {
      width: 100%;
      border: 1px solid var(--gw-form-field-border-color);
      border-radius: 0;
      padding: 0.75rem 1.5rem 0.75rem 3rem;
      font-size: 1.125rem;
      line-height: 1.25;
      background-clip: padding-box;
      outline: none;
      box-sizing: border-box;
      color: var(--gw-form-field-color);
      background-color: var(--gw-form-field-background);

      &:focus {
        box-shadow: none;
        border-color: var(--gw-form-field-focus-border-color);
      }

      &.ng-invalid.ng-touched {
        border: 1px solid #FA787E;
      }

      &.has-error {
        border: 1px solid var(--gw-inputtext-invalid-border-color);
      }
    }
  }

  .action {
    display: flex;
    justify-content: center;
  }

  .openid-login .action {
    margin-top: 2rem;
  }
}

